--- a/src/Components/Quotes/Quotes.styles.css
+++ b/src/Components/Quotes/Quotes.styles.css
@@ -14,6 +14,7 @@
   display: flex;
   justify-content: flex-end;
   font-size: 1.2rem;
+  padding: 20px;
 }
 
 .social-media {
@@ -46,12 +47,12 @@
   border-radius: 25px;
   outline: none;
   cursor: pointer;
-  box-shadow: 0 0.1rem rgba(0, 0, 0, 0.45);
+  box-shadow: 0 0.3rem rgba(0, 0, 0, 0.45);
 }
 
 #new-quote:active {
   transform: tranlate(0, 0.1rem);
-  box-shadow: 0 0.1rem rgba(255, 255, 255, 0.65);
+  box-shadow: 0 0.1rem rgba(0, 0, 0, 0.45);
 }
 
 #new-quote:hover {
