--- a/src/App.css
+++ b/src/App.css
@@ -10,18 +10,20 @@
   overflow-y: auto;
   overflow-x: hidden;
   min-width: 320px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 1);
 }
 
 .add-form {
   position: absolute;
-  background-color: rgba(7, 21, 36, 0.6);
+  background-color: rgba(38, 96, 158, 0.3);
   margin-bottom: 25px;
   border-radius: 25px;
-  padding: 5px;
-  left: 5%;
+  padding: 7px;
+  left: 3%;
   top: 30%;
-  width: 30vw;
+  width: 34vw;
   min-width: 320px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 1);
 }
 
 @media (max-width: 700px) {
@@ -29,11 +31,15 @@
     width: 90vw;
     padding: 10px;
     margin-top: 20px;
-    max-height: 370px;
+    max-height: 330px;
+    top: 42%;
     overflow-y: scroll;
   }
   .add-form {
     width: 90vw;
+    left: 5%;
+    top: 35%;
+    background-color: rgba(38, 96, 158, 0.6);
   }
 }
 
@@ -69,6 +75,14 @@ body {
 
   body {
     overflow: scroll;
+  }
+
+  .landscape4 {
+    opacity: 0;
+  }
+
+  .landscape3 {
+    opacity: 0.5;
   }
 }
 
@@ -163,10 +177,11 @@ body {
 
 .landscape4 {
   position: absolute;
-  width: 550px;
+  width: 570px;
   height: 100px;
   background-color: #1f4298;
-  transform: rotate(3deg);
+  border-radius: 25px;
+  transform: rotate(0deg);
   top: 250px;
   left: -10px;
 }
