--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   background-color: rgba(7, 21, 36, 0.6);
   padding: 40px;
   border-radius: 25px;
-  width: 30vw;
+  width: 40vw;
   max-height: 560px;
   overflow-y: auto;
   overflow-x: hidden;
@@ -21,8 +21,8 @@
   padding: 7px;
   left: 3%;
   top: 30%;
-  width: 34vw;
-  min-width: 320px;
+  width: 44vw;
+  min-width: 360px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 1);
 }
 
@@ -40,6 +40,7 @@
     left: 5%;
     top: 35%;
     background-color: rgba(38, 96, 158, 0.6);
+    min-width: 320px;
   }
 }
 
@@ -75,6 +76,10 @@ body {
 
   body {
     overflow: scroll;
+  }
+
+  .container {
+    min-height: 630px;
   }
 
   .landscape4 {
