--- a/src/Components/Quotes/Quotes.styles.css
+++ b/src/Components/Quotes/Quotes.styles.css
@@ -1,5 +1,5 @@
 #quote-box {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(255, 255, 255, 0.3);
   margin: 10rem auto;
   padding: 3rem;
   border-radius: 25px;
@@ -39,9 +39,9 @@
 }
 
 #new-quote {
-  background: #0059ff;
+  background: #12355b;
   border: none;
-  color: #12355b;
+  color: rgba(255, 255, 255, 0.65);
   padding: 0.7rem 1rem;
   font-size: 1.9rem;
   font-weight: bold;
@@ -53,6 +53,7 @@
 
 #new-quote:active {
   transform: tranlate(0, 0.1rem);
+  transition: 0.1s;
   box-shadow: 0 0.1rem rgba(0, 0, 0, 0.45);
 }
 
@@ -60,11 +61,19 @@
   opacity: 0.9;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 750px) {
   #new-quote {
     margin-top: 20px;
   }
   #quote-box {
     margin-top: 120px;
+  }
+  #quote-box {
+    background-color: rgba(255, 255, 255, 0.15);
+    left: 2px;
+    z-index: -1;
+  }
+  body {
+    overflow: scroll;
   }
 }
