--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
   border-radius: 25px;
   padding: 7px;
   left: 3%;
-  top: 29%;
+  top: 26%;
   width: 44vw;
   min-width: 360px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 1);
@@ -32,13 +32,13 @@
     padding: 10px;
     margin-top: 20px;
     max-height: 50vh;
-    top: 42%;
-    overflow-y: scroll;
+    top: 40%;
+    overflow-y: auto;
   }
   .add-form {
     width: 90vw;
     left: 5%;
-    top: 30%;
+    top: 26%;
     background-color: rgba(38, 96, 158, 0.6);
     min-width: 320px;
   }
@@ -76,17 +76,10 @@ body {
   overflow: hidden;
 }
 
-.quotes {
-  position: absolute;
-  width: 40vw;
-  height: 20vh;
-  top: 23%;
-}
-
 @media (max-width: 700px) {
   .quotes {
     position: absolute;
-    top: 88%;
+    top: 90%;
     left: 5%;
     width: 90vw;
   }
@@ -118,6 +111,7 @@ body {
   height: 100vh;
   top: 0%;
   left: 0%;
+  bottom: -20%;
   z-index: -1;
   position: absolute;
   border-radius: 50px;
