--- a/src/App.css
+++ b/src/App.css
@@ -1,128 +1,104 @@
-.container2 {
-  position: absolute;
-  left: 5%;
-  top: 40%;
-  background-color: rgba(7, 21, 36, 0.6);
-  padding: 40px;
-  border-radius: 25px;
-  width: 40vw;
-  max-height: 560px;
-  overflow-y: auto;
-  overflow-x: hidden;
-  min-width: 320px;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 1);
-}
-
-.add-form {
-  position: absolute;
-  background-color: rgba(38, 96, 158, 0.3);
-  margin-bottom: 25px;
-  border-radius: 25px;
-  padding: 7px;
-  left: 3%;
-  top: 26%;
-  width: 44vw;
-  min-width: 360px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 1);
-}
-
-@media (max-width: 700px) {
-  .container2 {
-    width: 90vw;
-    padding: 10px;
-    margin-top: 20px;
-    max-height: 50vh;
-    top: 40%;
-    overflow-y: auto;
-  }
-  .add-form {
-    width: 90vw;
-    left: 5%;
-    top: 26%;
-    background-color: rgba(38, 96, 158, 0.6);
-    min-width: 320px;
-  }
-}
-
-@media (max-height: 540px) {
-  .container2 {
-    top: 55%;
-  }
-}
-
-@media (max-height: 785px) {
-  .landscape4 {
-    opacity: 0;
-  }
-}
-@media (max-width: 540px) {
-  .landscape4 {
-    opacity: 0;
-  }
-}
-
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
 
-body {
-  height: 100vh;
+.App {
   display: flex;
-  background-color: #12355b;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-  overflow: hidden;
+  justify-content: center;
+}
+
+.app-container {
+  background: #1488cc;
+  background: -webkit-linear-gradient(to bottom, #2b32b2, #1488cc);
+  background: linear-gradient(to bottom, #2b32b2, #1488cc);
+
+  border-radius: 50px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1), 0 10px 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 98vw;
+  padding: 360px 30px 30px 30px;
+}
+
+@media screen and (max-width: 900px) {
+  .app-container {
+    width: 95vw;
+    overflow-x: hidden;
+  }
+}
+
+.form-todo-list {
+  max-width: 500px;
+  z-index: 100;
+  display: flex;
+  flex-grow: wrap;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+
+.todo-container {
+  background-color: rgba(7, 21, 36, 0.6);
+  padding: 18px;
+  max-width: 500px;
+  max-height: 400px;
+  overflow: auto;
+  margin: 10px 0px -15px 0px;
+  border-radius: 25px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 1);
+  z-index: 0;
 }
 
 .quotes {
-  position: absolute;
-  width: 40vw;
-  height: 20vh;
-  top: 24.5%;
-}
-
-@media (max-width: 700px) {
-  .quotes {
-    position: absolute;
-    top: 90%;
-    left: 5%;
-    width: 90vw;
-  }
-
-  body {
-    overflow: scroll;
-  }
-
-  .container {
-    min-height: 630px;
-  }
-}
-
-.container {
-  /*change the size of landscape here */
-  overflow: hidden;
-  background: #1488cc; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to bottom,
-    #2b32b2,
-    #1488cc
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to bottom,
-    #2b32b2,
-    #1488cc
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  width: 100vw;
-  height: 100vh;
-  top: 0%;
-  left: 0%;
-  bottom: -20%;
-  z-index: -1;
-  position: absolute;
+  margin-top: 10px;
   border-radius: 50px;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1), 0 10px 10px rgba(0, 0, 0, 0.1);
+  padding: 0 24px;
+}
+
+@media (max-width: 668px) {
+  .quotes {
+    margin-top: -100px;
+    max-width: 500px;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .quotes {
+    width: 95vw;
+  }
+}
+
+.landscape4 {
+  position: absolute;
+  width: 95vw;
+  height: 100px;
+  padding: 0 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: #1f4298;
+  border-radius: 25px;
+  transform: rotate(0deg);
+  top: 260px;
+}
+
+@media (max-width: 768px) {
+  .landscape4 {
+    width: 85vw;
+  }
+}
+
+.add-form {
+  background-color: rgba(38, 96, 158, 0.3);
+  border-radius: 25px;
+  padding: 7px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 1);
+  z-index: 1;
 }
 
 /* add moon and outer moon rings here */
@@ -165,7 +141,6 @@ body {
 .landscape1 {
   position: absolute;
   width: 70vw;
-  min-width: 533px;
   border-radius: 25px;
   height: 100px;
   background-color: #567cdc;
@@ -175,19 +150,24 @@ body {
 
 .landscape2 {
   position: absolute;
-  width: 550px;
+  width: 80vw;
   height: 100px;
   background-color: #3462d5;
   border-radius: 25px;
   transform: rotate(8deg);
   top: 190px;
-  left: -10px;
+  left: 15px;
+}
+
+@media screen and (min-width: 1000px) {
+  .landscape2 {
+    transform: rotate(3deg);
+  }
 }
 
 .landscape3 {
   position: absolute;
   width: 90vw;
-  min-width: 570px;
   height: 100px;
   border-radius: 25px;
   background-color: #2650ba;
@@ -195,23 +175,23 @@ body {
   top: 210px;
 }
 
-.landscape4 {
-  position: absolute;
-  width: 100vw;
-  height: 100px;
-  background-color: #1f4298;
-  border-radius: 25px;
-  transform: rotate(0deg);
-  top: 250px;
+@media (max-width: 900px) {
+  .landscape2 {
+    width: 50vw;
+  }
 }
 
-@media (max-width: 550px) {
+@media (max-width: 600px) {
   .landscape1 {
-    width: 100vw;
+    width: 90vw;
   }
 
-  .landscape4 {
-    width: 100vw;
+  .landscape2 {
+    width: 90vw;
+  }
+
+  .landscape3 {
+    width: 90vw;
   }
 }
 
@@ -232,7 +212,7 @@ body {
 .tree2 {
   position: absolute;
   top: 1550px;
-  left: 135px;
+  left: 105px;
   height: 20px;
   width: 15px;
   background-color: #59a5d8;
@@ -292,6 +272,24 @@ body {
 @media (min-width: 865px) {
   .tree1 {
     background-color: rgba(0, 0, 0, 0);
+  }
+}
+
+@media (max-width: 470px) {
+  .tree1 {
+    display: none;
+  }
+
+  .tree2 {
+    left: 250px;
+  }
+
+  .tree4 {
+    display: none;
+  }
+
+  .tree6 {
+    left: 300px;
   }
 }
 
@@ -376,6 +374,23 @@ body {
 
 #animate {
   animation: glow 4s infinite;
+}
+
+@media (max-width: 600px) {
+  .shootingstar {
+    left: 300px;
+  }
+
+  .shootingstar2 {
+    left: 305px;
+  }
+
+  .s10,
+  .s9,
+  .s8,
+  .s7 {
+    display: none;
+  }
 }
 
 /* all the animation goes here */
