--- a/src/Components/Quotes/Quotes.styles.css
+++ b/src/Components/Quotes/Quotes.styles.css
@@ -1,15 +1,16 @@
 #quote-box {
-  background-color: rgba(255, 255, 255, 0.3);
-  margin: 10rem auto;
-  padding: 3rem;
+  background-color: rgba(38, 96, 158, 0.6);
+  max-width: 500px;
+  padding: 1rem;
   border-radius: 25px;
   box-shadow: 0 0 15px rgba(0, 0, 0, 1);
-  margin-bottom: 20px;
 }
 
 #text {
-  font-size: 2rem;
+  font-size: 1.4rem;
   margin-bottom: 1.5rem;
+  margin-left: 20px;
+  color: #e7eae5;
 }
 
 #author {
@@ -70,11 +71,8 @@
     margin-top: 120px;
   }
   #quote-box {
-    background-color: rgba(38, 96, 158, 0.6);
     left: 2px;
     z-index: -1;
-  }
-  body {
-    overflow: scroll;
+    margin-bottom: 20px;
   }
 }
