--- a/src/Components/Todo/Todo.styles.css
+++ b/src/Components/Todo/Todo.styles.css
@@ -8,7 +8,7 @@
 .task-container {
   width: 40vw;
   margin: 10px;
-  padding: 2px;
+  padding: 3px 1px 1px 1px;
   background-color: #1488cc;
   border-radius: 20px;
 }
