--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding-bottom: 5px;
 }
 
 .app-container {
@@ -89,14 +90,13 @@
 
 @media (max-width: 768px) {
   .landscape4 {
-    width: 85vw;
+    width: 92vw;
   }
 }
 
 .add-form {
-  background-color: rgba(38, 96, 158, 0.3);
   border-radius: 25px;
-  padding: 7px;
+  padding: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 1);
   z-index: 1;
 }
